force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__Account__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Individual account which represents the patient in force.com</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Program Patient Summary</relationshipLabel>
    <relationshipName>ProgramPatientSummary</relationshipName>
    <type>Lookup</type>
</CustomField>