force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__Age__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Age__c</fullName>
    <description>Patient Age.</description>
    <inlineHelpText>Patient Age.</inlineHelpText>
    <label>Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>