force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__AgeBand__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AgeBand__c</fullName>
    <description>Patient’s age calculated into age bands: 0 - 34,35-44,45-54,55-59,60-64,65-69,70-74,75-79,80-84,85-89,90-94, 95 and older.</description>
    <formula>IF(HealthCloudGA__Age__c &gt; 94, &quot;95 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old_Or_Over ,
IF(HealthCloudGA__Age__c &gt; 89, &quot;90-94 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 84,&quot;85-89 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 79,&quot;80-84 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 74,&quot;75-79 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 69, &quot;70-74 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 64,&quot;65-69 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 59, &quot;60-64 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 54, &quot;55-59 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 44, &quot;45-54 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &gt; 34, &quot;35-44 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old ,
IF(HealthCloudGA__Age__c &lt; 35, &quot;0-34 &quot; &amp; $Label.HealthCloudGA__Formula_Label_Years_Old,$Label.HealthCloudGA__Formula_Label_Not_Applicable))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Patient’s age calculated into age bands: 0 - 34,35-44,45-54,55-59,60-64,65-69,70-74,75-79,80-84,85-89,90-94, 95 and older.</inlineHelpText>
    <label>Age Band</label>
    <type>Text</type>
</CustomField>