force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__Conditions__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Conditions__c</fullName>
    <description>List of HCC condition categories applied to the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>List of HCC condition categories applied to the patient.</inlineHelpText>
    <label>Conditions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>