force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__DisabilityStatus__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DisabilityStatus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CMS disability status.</description>
    <inlineHelpText>CMS disability status.</inlineHelpText>
    <label>Disability Status</label>
    <type>Checkbox</type>
</CustomField>