force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EffectiveDate__c</fullName>
    <description>Date the risk score was calculated.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the risk score was calculated.</inlineHelpText>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>