force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__Gender__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Gender__c</fullName>
    <description>Male/ Female</description>
    <inlineHelpText>Male/ Female</inlineHelpText>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Male</fullName>
            </value>
            <value>
                <fullName>Female</fullName>
            </value>
            <value>
                <fullName>Decline to Specify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>