force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__HCCCodes__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__HCCCodes__c</fullName>
    <description>The final HCC Codes that are applicable to the patient after applying the overriding logic.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The final HCC Codes that are applicable to the patient after applying the overriding logic.</inlineHelpText>
    <label>HCC Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>