force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__LowIncome__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__LowIncome__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the patient falls within low income guidelines.</description>
    <inlineHelpText>Indicates whether the patient falls within low income guidelines.</inlineHelpText>
    <label>Low Income</label>
    <type>Checkbox</type>
</CustomField>