force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__Month__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Month__c</fullName>
    <description>The month that the time calculation is applicable for.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The month that the time calculation is applicable for.</inlineHelpText>
    <label>Month</label>
    <length>2</length>
    <type>Text</type>
</CustomField>