force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__NumberOfConditions__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__NumberOfConditions__c</fullName>
    <description>Number of HCC condition categories that apply to the patient.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Number of HCC condition categories that apply to the patient.</inlineHelpText>
    <label>Number of Conditions</label>
    <length>3</length>
    <type>Text</type>
</CustomField>