force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__ProgramPatientAffiliation__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ProgramPatientAffiliation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Patient Affiliation</label>
    <referenceTo>HealthCloudGA__ProgramPatientAffiliation__c</referenceTo>
    <relationshipLabel>Program Patient Summary</relationshipLabel>
    <relationshipName>ProgramPatientSummary</relationshipName>
    <type>Lookup</type>
</CustomField>