force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__RiskScore__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__RiskScore__c</fullName>
    <description>HCC risk score calculated for the patient.</description>
    <inlineHelpText>HCC risk score calculated for the patient.</inlineHelpText>
    <label>Risk Score</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>