force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__TimeSpent__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TimeSpent__c</fullName>
    <description>Total time spent with the patient in the measurement period for qualifying activities.</description>
    <inlineHelpText>Total time spent with the patient in the measurement period for qualifying activities.</inlineHelpText>
    <label>Time Spent</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>