force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__Unique__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Unique__c</fullName>
    <formula>Name&amp; HealthCloudGA__Year__c &amp; HealthCloudGA__Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique</label>
    <type>Text</type>
</CustomField>