force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/fields/HealthCloudGA__Year__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Year__c</fullName>
    <description>Indicates the year the risk score is applicable to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Indicates the year the risk score is applicable to.</inlineHelpText>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>