force-app/main/default/src/objects/HealthCloudGA__ProgramPatientSummary__c/recordTypes/HealthCloudGA__RiskScoring.recordType-meta.xml
<RecordType>
    <fullName>HealthCloudGA__RiskScoring</fullName>
    <active>true</active>
    <label>Risk Scoring</label>
</RecordType>